# EmbeddedSystemsBuildScripts

AvrToolchain/: avr.bzl
AvrToolchain/cc_toolchain/: cc_toolchain.bzl  cc_toolchain_config.bzl.tpl
example/: BUILD.bazel  main.cpp  test.hpp
