load("@AvrToolchain//platforms/cpu_frequency:cpu_frequency.bzl", "cpu_frequency_flag")
load("@AvrToolchain//:helpers.bzl", "default_embedded_binary")

default_embedded_binary(
    name = "main",
    srcs = [
        "main.cpp",
    ],
    deps = [":testlib"],
)

cc_library(
    name = "testlib",
    hdrs = [
        "test.hpp",
    ],
)

#platform(
#    name = "MyPlatform",
#    constraint_values = [
#        "@AvrToolchain//platforms/mcu:atmega328p",
#        "@AvrToolchain//platforms/cpu_frequency:8mhz",
#    ],
#    parents = ["@AvrToolchain//platforms:avr_common"],
#)
